edu/uwm/cs/cool/parser/Cool.output
Terminals which are not used

   NOT
   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list
    2        | error

    3 class_list: class_decl
    4           | error ';'
    5           | class_list class_decl
    6           | class_list error ';'

    7 class_decl: CLASS TYPEID formals superclass '{' feature_list '}'

    8 superclass: /* empty */
    9           | EXTENDS TYPEID actuals
   10           | EXTENDS NATIVE

   11 feature_list: /* empty */
   12             | feature_list feature ';'
   13             | feature_list error ';'
   14             | feature_list NATIVE ';'
   15             | feature_list '{' block '}'

   16 feature: opt_override DEF OBJECTID formals ':' TYPEID '=' expr
   17        | opt_override DEF OBJECTID formals ':' TYPEID NATIVE
   18        | VAR OBJECTID ':' TYPEID '=' expr
   19        | VAR OBJECTID ':' NATIVE

   20 opt_override: OVERRIDE
   21             | /* empty */

   22 formals: '(' ')'
   23        | '(' formal_list ')'
   24        | '(' error ')'

   25 formal_list: formal
   26            | formal_list ',' formal

   27 formal: OBJECTID ':' TYPEID

   28 expr: OBJECTID '=' expr
   29     | SUPER '.' OBJECTID actuals
   30     | expr '.' OBJECTID actuals
   31     | IF '(' expr ')' expr ELSE expr
   32     | WHILE '(' expr ')' expr
   33     | '{' block '}'
   34     | expr MATCH '{' case_list '}'
   35     | NEW TYPEID actuals
   36     | expr '+' expr
   37     | expr '-' expr
   38     | expr '*' expr
   39     | expr '/' expr
   40     | '-' expr
   41     | expr '<' expr
   42     | expr EQ expr
   43     | expr EQEQ expr
   44     | expr LE expr
   45     | '!' expr
   46     | '(' expr ')'
   47     | NULL
   48     | INT_LIT
   49     | STR_LIT
   50     | BOOL_LIT
   51     | OBJECTID
   52     | OBJECTID actuals

   53 block: stmt_list

   54 stmt_list: expr ';'
   55          | expr
   56          | error
   57          | expr ';' stmt_list
   58          | VAR OBJECTID ':' TYPEID '=' expr ';' stmt_list
   59          | error ';' stmt_list

   60 actuals: '(' ')'
   61        | '(' exp_list ')'

   62 exp_list: expr
   63         | exp_list ',' expr

   64 case_list: simple_cases

   65 simple_cases: simple_case
   66             | simple_cases simple_case

   67 simple_case: CASE OBJECTID ':' TYPEID ARROW expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 45
'(' (40) 22 23 24 31 32 46 60 61
')' (41) 22 23 24 31 32 46 60 61
'*' (42) 38
'+' (43) 36
',' (44) 26 63
'-' (45) 37 40
'.' (46) 29 30
'/' (47) 39
':' (58) 16 17 18 19 27 58 67
';' (59) 4 6 12 13 14 54 57 58 59
'<' (60) 41
'=' (61) 16 18 28 58
'{' (123) 7 15 33 34
'}' (125) 7 15 33 34
error (256) 2 4 6 13 24 56 59
CASE (258) 67
CLASS (259) 7
DEF (260) 16 17
ELSE (261) 31
EQ (262) 42
EXTENDS (263) 9 10
IF (264) 31
MATCH (265) 34
NATIVE (266) 10 14 17 19
NEW (267) 35
NULL (268) 47
NOT (269)
OVERRIDE (270) 20
SUPER (271) 29
VAR (272) 18 19 58
WHILE (273) 32
STR_LIT (274) 49
INT_LIT (275) 48
BOOL_LIT (276) 50
TYPEID (277) 7 9 16 17 18 27 35 58 67
OBJECTID (278) 16 17 18 19 27 28 29 30 51 52 58 67
EQEQ (279) 43
LE (280) 44
ARROW (281) 67
ERROR (282)
UNARY (283)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1 2, on right: 0
class_list (46)
    on left: 3 4 5 6, on right: 1 5 6
class_decl (47)
    on left: 7, on right: 3 5
superclass (48)
    on left: 8 9 10, on right: 7
feature_list (49)
    on left: 11 12 13 14 15, on right: 7 12 13 14 15
feature (50)
    on left: 16 17 18 19, on right: 12
opt_override (51)
    on left: 20 21, on right: 16 17
formals (52)
    on left: 22 23 24, on right: 7 16 17
formal_list (53)
    on left: 25 26, on right: 23 26
formal (54)
    on left: 27, on right: 25 26
expr (55)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
    46 47 48 49 50 51 52, on right: 16 18 28 30 31 32 34 36 37 38 39
    40 41 42 43 44 45 46 54 55 57 58 62 63 67
block (56)
    on left: 53, on right: 15 33
stmt_list (57)
    on left: 54 55 56 57 58 59, on right: 53 57 58 59
actuals (58)
    on left: 60 61, on right: 9 29 30 35 52
exp_list (59)
    on left: 62 63, on right: 61 63
case_list (60)
    on left: 64, on right: 34
simple_cases (61)
    on left: 65 66, on right: 64 66
simple_case (62)
    on left: 67, on right: 65 66


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class_decl  go to state 5


state 1

    2 program: error .
    4 class_list: error . ';'

    ';'  shift, and go to state 6

    $default  reduce using rule 2 (program)


state 2

    7 class_decl: CLASS . TYPEID formals superclass '{' feature_list '}'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    5 class_list: class_list . class_decl
    6           | class_list . error ';'

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class_decl  go to state 10


state 5

    3 class_list: class_decl .

    $default  reduce using rule 3 (class_list)


state 6

    4 class_list: error ';' .

    $default  reduce using rule 4 (class_list)


state 7

    7 class_decl: CLASS TYPEID . formals superclass '{' feature_list '}'

    '('  shift, and go to state 11

    formals  go to state 12


state 8

    0 $accept: program $end .

    $default  accept


state 9

    6 class_list: class_list error . ';'

    ';'  shift, and go to state 13


state 10

    5 class_list: class_list class_decl .

    $default  reduce using rule 5 (class_list)


state 11

   22 formals: '(' . ')'
   23        | '(' . formal_list ')'
   24        | '(' . error ')'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15
    ')'       shift, and go to state 16

    formal_list  go to state 17
    formal       go to state 18


state 12

    7 class_decl: CLASS TYPEID formals . superclass '{' feature_list '}'

    EXTENDS  shift, and go to state 19

    $default  reduce using rule 8 (superclass)

    superclass  go to state 20


state 13

    6 class_list: class_list error ';' .

    $default  reduce using rule 6 (class_list)


state 14

   24 formals: '(' error . ')'

    ')'  shift, and go to state 21


state 15

   27 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 22


state 16

   22 formals: '(' ')' .

    $default  reduce using rule 22 (formals)


state 17

   23 formals: '(' formal_list . ')'
   26 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 23
    ','  shift, and go to state 24


state 18

   25 formal_list: formal .

    $default  reduce using rule 25 (formal_list)


state 19

    9 superclass: EXTENDS . TYPEID actuals
   10           | EXTENDS . NATIVE

    NATIVE  shift, and go to state 25
    TYPEID  shift, and go to state 26


state 20

    7 class_decl: CLASS TYPEID formals superclass . '{' feature_list '}'

    '{'  shift, and go to state 27


state 21

   24 formals: '(' error ')' .

    $default  reduce using rule 24 (formals)


state 22

   27 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 28


state 23

   23 formals: '(' formal_list ')' .

    $default  reduce using rule 23 (formals)


state 24

   26 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 15

    formal  go to state 29


state 25

   10 superclass: EXTENDS NATIVE .

    $default  reduce using rule 10 (superclass)


state 26

    9 superclass: EXTENDS TYPEID . actuals

    '('  shift, and go to state 30

    actuals  go to state 31


state 27

    7 class_decl: CLASS TYPEID formals superclass '{' . feature_list '}'

    $default  reduce using rule 11 (feature_list)

    feature_list  go to state 32


state 28

   27 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 27 (formal)


state 29

   26 formal_list: formal_list ',' formal .

    $default  reduce using rule 26 (formal_list)


state 30

   60 actuals: '(' . ')'
   61        | '(' . exp_list ')'

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    ')'       shift, and go to state 45
    '!'       shift, and go to state 46

    expr      go to state 47
    exp_list  go to state 48


state 31

    9 superclass: EXTENDS TYPEID actuals .

    $default  reduce using rule 9 (superclass)


state 32

    7 class_decl: CLASS TYPEID formals superclass '{' feature_list . '}'
   12 feature_list: feature_list . feature ';'
   13             | feature_list . error ';'
   14             | feature_list . NATIVE ';'
   15             | feature_list . '{' block '}'

    error     shift, and go to state 49
    NATIVE    shift, and go to state 50
    OVERRIDE  shift, and go to state 51
    VAR       shift, and go to state 52
    '{'       shift, and go to state 53
    '}'       shift, and go to state 54

    DEF  reduce using rule 21 (opt_override)

    feature       go to state 55
    opt_override  go to state 56


state 33

   31 expr: IF . '(' expr ')' expr ELSE expr

    '('  shift, and go to state 57


state 34

   35 expr: NEW . TYPEID actuals

    TYPEID  shift, and go to state 58


state 35

   47 expr: NULL .

    $default  reduce using rule 47 (expr)


state 36

   29 expr: SUPER . '.' OBJECTID actuals

    '.'  shift, and go to state 59


state 37

   32 expr: WHILE . '(' expr ')' expr

    '('  shift, and go to state 60


state 38

   49 expr: STR_LIT .

    $default  reduce using rule 49 (expr)


state 39

   48 expr: INT_LIT .

    $default  reduce using rule 48 (expr)


state 40

   50 expr: BOOL_LIT .

    $default  reduce using rule 50 (expr)


state 41

   28 expr: OBJECTID . '=' expr
   51     | OBJECTID .
   52     | OBJECTID . actuals

    '='  shift, and go to state 61
    '('  shift, and go to state 30

    $default  reduce using rule 51 (expr)

    actuals  go to state 62


state 42

   40 expr: '-' . expr

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr  go to state 63


state 43

   33 expr: '{' . block '}'

    error     shift, and go to state 64
    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    VAR       shift, and go to state 65
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr       go to state 66
    block      go to state 67
    stmt_list  go to state 68


state 44

   46 expr: '(' . expr ')'

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr  go to state 69


state 45

   60 actuals: '(' ')' .

    $default  reduce using rule 60 (actuals)


state 46

   45 expr: '!' . expr

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr  go to state 70


state 47

   30 expr: expr . '.' OBJECTID actuals
   34     | expr . MATCH '{' case_list '}'
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . EQ expr
   43     | expr . EQEQ expr
   44     | expr . LE expr
   62 exp_list: expr .

    EQ     shift, and go to state 71
    MATCH  shift, and go to state 72
    EQEQ   shift, and go to state 73
    LE     shift, and go to state 74
    '<'    shift, and go to state 75
    '-'    shift, and go to state 76
    '+'    shift, and go to state 77
    '*'    shift, and go to state 78
    '/'    shift, and go to state 79
    '.'    shift, and go to state 80

    $default  reduce using rule 62 (exp_list)


state 48

   61 actuals: '(' exp_list . ')'
   63 exp_list: exp_list . ',' expr

    ')'  shift, and go to state 81
    ','  shift, and go to state 82


state 49

   13 feature_list: feature_list error . ';'

    ';'  shift, and go to state 83


state 50

   14 feature_list: feature_list NATIVE . ';'

    ';'  shift, and go to state 84


state 51

   20 opt_override: OVERRIDE .

    $default  reduce using rule 20 (opt_override)


state 52

   18 feature: VAR . OBJECTID ':' TYPEID '=' expr
   19        | VAR . OBJECTID ':' NATIVE

    OBJECTID  shift, and go to state 85


state 53

   15 feature_list: feature_list '{' . block '}'

    error     shift, and go to state 64
    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    VAR       shift, and go to state 65
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr       go to state 66
    block      go to state 86
    stmt_list  go to state 68


state 54

    7 class_decl: CLASS TYPEID formals superclass '{' feature_list '}' .

    $default  reduce using rule 7 (class_decl)


state 55

   12 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 87


state 56

   16 feature: opt_override . DEF OBJECTID formals ':' TYPEID '=' expr
   17        | opt_override . DEF OBJECTID formals ':' TYPEID NATIVE

    DEF  shift, and go to state 88


state 57

   31 expr: IF '(' . expr ')' expr ELSE expr

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr  go to state 89


state 58

   35 expr: NEW TYPEID . actuals

    '('  shift, and go to state 30

    actuals  go to state 90


state 59

   29 expr: SUPER '.' . OBJECTID actuals

    OBJECTID  shift, and go to state 91


state 60

   32 expr: WHILE '(' . expr ')' expr

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr  go to state 92


state 61

   28 expr: OBJECTID '=' . expr

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr  go to state 93


state 62

   52 expr: OBJECTID actuals .

    $default  reduce using rule 52 (expr)


state 63

   30 expr: expr . '.' OBJECTID actuals
   34     | expr . MATCH '{' case_list '}'
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   40     | '-' expr .
   41     | expr . '<' expr
   42     | expr . EQ expr
   43     | expr . EQEQ expr
   44     | expr . LE expr

    '.'  shift, and go to state 80

    $default  reduce using rule 40 (expr)


state 64

   56 stmt_list: error .
   59          | error . ';' stmt_list

    ';'  shift, and go to state 94

    $default  reduce using rule 56 (stmt_list)


state 65

   58 stmt_list: VAR . OBJECTID ':' TYPEID '=' expr ';' stmt_list

    OBJECTID  shift, and go to state 95


state 66

   30 expr: expr . '.' OBJECTID actuals
   34     | expr . MATCH '{' case_list '}'
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . EQ expr
   43     | expr . EQEQ expr
   44     | expr . LE expr
   54 stmt_list: expr . ';'
   55          | expr .
   57          | expr . ';' stmt_list

    EQ     shift, and go to state 71
    MATCH  shift, and go to state 72
    EQEQ   shift, and go to state 73
    LE     shift, and go to state 74
    '<'    shift, and go to state 75
    '-'    shift, and go to state 76
    '+'    shift, and go to state 77
    '*'    shift, and go to state 78
    '/'    shift, and go to state 79
    '.'    shift, and go to state 80
    ';'    shift, and go to state 96

    $default  reduce using rule 55 (stmt_list)


state 67

   33 expr: '{' block . '}'

    '}'  shift, and go to state 97


state 68

   53 block: stmt_list .

    $default  reduce using rule 53 (block)


state 69

   30 expr: expr . '.' OBJECTID actuals
   34     | expr . MATCH '{' case_list '}'
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . EQ expr
   43     | expr . EQEQ expr
   44     | expr . LE expr
   46     | '(' expr . ')'

    EQ     shift, and go to state 71
    MATCH  shift, and go to state 72
    EQEQ   shift, and go to state 73
    LE     shift, and go to state 74
    '<'    shift, and go to state 75
    '-'    shift, and go to state 76
    '+'    shift, and go to state 77
    '*'    shift, and go to state 78
    '/'    shift, and go to state 79
    '.'    shift, and go to state 80
    ')'    shift, and go to state 98


state 70

   30 expr: expr . '.' OBJECTID actuals
   34     | expr . MATCH '{' case_list '}'
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . EQ expr
   43     | expr . EQEQ expr
   44     | expr . LE expr
   45     | '!' expr .

    '.'  shift, and go to state 80

    $default  reduce using rule 45 (expr)


state 71

   42 expr: expr EQ . expr

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr  go to state 99


state 72

   34 expr: expr MATCH . '{' case_list '}'

    '{'  shift, and go to state 100


state 73

   43 expr: expr EQEQ . expr

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr  go to state 101


state 74

   44 expr: expr LE . expr

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr  go to state 102


state 75

   41 expr: expr '<' . expr

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr  go to state 103


state 76

   37 expr: expr '-' . expr

    IF        shift, and go to state 33
    NEW       shift, and go to state 34
    NULL      shift, and go to state 35
    SUPER     shift, and go to state 36
    WHILE     shift, and go to state 37
    STR_LIT   shift, and go to state 38
    INT_LIT   shift, and go to state 39
    BOOL_LIT  shift, and go to state 40
    OBJECTID  shift, and go to state 41
    '-'       shift, and go to state 42
    '{'       shift, and go to state 43
    '('       shift, and go to state 44
    '!'       shift, and go to state 46

    expr  go to state 104


state 77

   36 expr: expr '+' . expr
